# gravitysimcpp

./: CMakeLists.txt  Dockerfile  README.md
include/: CMakeLists.txt  barnes_hut_tree.cpp  barnes_hut_tree.hpp  body.cpp  body.hpp  n_body_sim.cpp  n_body_sim.hpp  settings.cpp  settings.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
